--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -3,7 +3,8 @@
   <head>
     <link rel='stylesheet' type='text/css' href='lib/extjs/resources/css/ext-all-debug.css'/>
 
-    <script src='lib/extjs/ext-all-dev.js' type='text/javascript'></script>
-    <script src='gde.js' type='text/javascript'></script>
+    <script src='lib/extjs/ext-all-dev.js'></script>
+    <script src='lib/easeljs/easeljs-0.6.1.min.js'></script>
+    <script src='gde.js'></script>
   </head>
 </html>
