--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -5,6 +5,7 @@
 
     <script src='lib/extjs/ext-all-dev.js'></script>
     <script src='lib/easeljs/easeljs-0.6.1.min.js'></script>
+    <script src='lib/jquery/jquery-2.0.3.js'></script>
 
     <script src='ux/CanvasPanel.js'></script>
     <script src='ux/EaselPanel.js'></script>
