--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -11,6 +11,7 @@
     <script src='ux/EaselPanel.js'></script>
     <script src='ux/EaselPanelUtils.js'></script>
 
+    <script src='gde/view/BitmapGallery.js'></script>
     <script src='gde/view/OffsetImageCanvas.js'></script>
 
     <script src='gde.js'></script>
