added preloadjs lib, show bitmap in canvas

--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -4,7 +4,8 @@
     <link rel='stylesheet' type='text/css' href='lib/extjs/resources/css/carbon/carbon.css'/>
 
     <script src='lib/extjs/ext-all-dev.js'></script>
-    <script src='lib/easeljs/easeljs-0.6.1.min.js'></script>
+    <script src='lib/createjs/easeljs-0.6.1.min.js'></script>
+    <script src='lib/createjs/preloadjs-0.3.1.min.js'></script>
     <script src='lib/jquery/jquery-2.0.3.js'></script>
 
     <script src='ux/CanvasPanel.js'></script>
