--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -15,6 +15,8 @@
     <script src='gde/view/AnimationGallery.js'></script>
     <script src='gde/view/BitmapGallery.js'></script>
     <script src='gde/view/OffsetImageCanvas.js'></script>
+    <script src='gde/view/SpriteAnimationCanvas.js'></script>
+    <script src='gde/view/Viewport.js'></script>
 
     <script src='gde.js'></script>
   </head>
