--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -1,7 +1,7 @@
 <!doctype>
 <html>
   <head>
-    <link rel='stylesheet' type='text/css' href='lib/extjs/resources/css/carbon/carbon.css'/>
+    <link rel='stylesheet' href='lib/extjs/resources/css/carbon/carbon.css'/>
 
     <script src='lib/extjs/ext-all-dev.js'></script>
     <script src='lib/createjs/easeljs-0.6.1.min.js'></script>
@@ -13,6 +13,7 @@
     <script src='ux/EaselPanelUtils.js'></script>
 
     <script src='gde/view/AnimationGallery.js'></script>
+    <script src='gde/view/BitmapExportWindow.js'></script>
     <script src='gde/view/BitmapGallery.js'></script>
     <script src='gde/view/OffsetImageCanvas.js'></script>
     <script src='gde/view/SpriteAnimationCanvas.js'></script>
