--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -8,6 +8,7 @@
     <script src='lib/createjs/preloadjs-0.3.1.min.js'></script>
     <script src='lib/jquery/jquery-2.0.3.js'></script>
 
+    <script src='ux/PathUtils.js'></script>
     <script src='ux/CanvasPanel.js'></script>
     <script src='ux/EaselPanel.js'></script>
     <script src='ux/EaselPanelUtils.js'></script>
