setting up map gallery

--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -16,6 +16,7 @@
     <script src='gde/view/AnimationGallery.js'></script>
     <script src='gde/view/BitmapExportWindow.js'></script>
     <script src='gde/view/BitmapGallery.js'></script>
+    <script src='gde/view/MapGallery.js'></script>
     <script src='gde/view/OffsetImageCanvas.js'></script>
     <script src='gde/view/SpriteAnimationCanvas.js'></script>
     <script src='gde/view/Viewport.js'></script>
