bug fixing in tile map canvas

--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -19,6 +19,7 @@
     <script src='gde/view/MapGallery.js'></script>
     <script src='gde/view/OffsetImageCanvas.js'></script>
     <script src='gde/view/SpriteAnimationCanvas.js'></script>
+    <script src='gde/view/TileMapCanvas.js'></script>
     <script src='gde/view/Viewport.js'></script>
 
     <script src='gde.js'></script>
