zig zag rendering

--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -16,11 +16,13 @@
     <script src='gde/view/AnimationGallery.js'></script>
     <script src='gde/view/BitmapExportWindow.js'></script>
     <script src='gde/view/BitmapGallery.js'></script>
+    <script src='gde/view/ExperimentSpace.js'></script>
     <script src='gde/view/MapGallery.js'></script>
     <script src='gde/view/OffsetImageCanvas.js'></script>
     <script src='gde/view/SpriteAnimationCanvas.js'></script>
     <script src='gde/view/TileMapCanvas.js'></script>
     <script src='gde/view/Viewport.js'></script>
+    <script src='gde/view/WorldCanvas.js'></script>
 
     <script src='gde.js'></script>
   </head>
